--- a/admin-pro-backend-0.14.0/admin-pro-backend-0.14.0/package.json
+++ b/admin-pro-backend-0.14.0/admin-pro-backend-0.14.0/package.json
@@ -19,6 +19,7 @@
     "google-auth-library": "^6.0.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.21",
+    "nodemon": "^3.0.1",
     "uuid": "^8.2.0"
   }
 }
